# RndSrvCli

./: README
RndCli/: CMakeLists.txt  README
RndCli/src/: main.cpp  rndcli.cpp  rndcli.h  tcpclient.cpp  tcpclient.h
RndSrv/: CMakeLists.txt  README
RndSrv/src/: main.cpp  rndsrv.cpp  rndsrv.h  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  tcpserver.h
